--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body, * {
 }
 
 .tel {
-    font-family: "Anton";
+    font-family: Anton;
     font-style: normal;
     font-weight: normal;
     font-size: 17px;
